### Voltaire's Nightmare Changelog ###

# v 2.0.2 #

-Small fixes for the following mission trees: Luxembourg, Baghdad, Ifriqiya, Seljuk, Franche-Comte, Switzerland, Karling, Holland, Novgorod, Foix, Kiev, Latin Empire, Cologne
-Added a decision to unite the Kievan Rus unlocked when the last reform is passed
-Fixed several mission modifiers
-Fixed the Bavarian NI set being duplicated
-Samogitian Ideas now apply to all Samogitian primary culture tags
-Added dynamic names for Tusculum, the Roman Commune and the Roman Republic used by Latium
-Fixed a few mission tooltips
-European nations no longer get the estate agenda to obtain spice provinces
-Fixed Gotland naming issue
-Buffed Fragmentation of Poland rebels

# v 2.0.1 #

-Small fixes for the following mission trees: Alania, Barcelona, Breton REL, Brandenburg, Karlings, Kiev, Volga Bulgaria, Luxembourg, Qahira
-Overhauled Nitra's mission tree structure and improved several missions
-Some missions that only display effects after fulfilling triggers now show an extra tooltip
-Fixed 1054 startup screen text not showing for tags in Carpathia superregion
-Fixed non-working localization in some mission modifiers
-Fixed a bunch of advisor icons not showing correctly
-Changed early Saxony's country name to Altsachsen
-Changed early Celje's country name to Savinja
-Fixed Roger II of Sicily's incorrect regnal number
-Fixed Temples being given by several events before tech 36
-Significantly lowered attrition at sea to make it less unfairly punishing
-Improved mountain visuals in Carpathia
-Fixed position bug that prevented Sweden from moving its starting ships
-Other small localization fixes

# v 2.0.0 #

Due to the sheer magnitude of changes from previous versions this will be far from a complete changelog, but rather a brief summary of the major changes in this expansion:

-Complete overhaul and expansion of the map with several thousand new provinces, and dozens of new tags
-Innumerable history tweaks