@@ -7270,3 +7270,42 @@ country_event = {
 		}
 	}
 }
+
+country_event = {
+	id = hremodevents.130
+	title = "HREMT130"
+	desc = "HREMD130"
+	picture = BATTLE_eventPicture
+
+	fire_only_once = yes
+	major = yes
+	major_trigger = {
+		tag = FRA
+	}
+
+	trigger = {
+		normal_or_historical_nations = yes
+		tag = ENG
+		is_subject = no
+		government = monarchy
+		NOT = { has_global_flag = eng_had_start_of_hundred_years_war }
+		num_of_provinces_owned_or_owned_by_non_sovereign_subjects_with = {
+			value = 30
+			superregion = french_superregion
+		}
+		exists = FRA
+		NOT = { alliance_with = FRA }
+		NOT = { historical_rival_with = FRA }
+		NOT = { FRA = { historical_rival_with = ROOT } }
+	}
+
+	mean_time_to_happen = {
+		months = 24
+	}
+
+	option = {
+		name = "HREMA130"
+		add_historical_rival = FRA
+		FRA = { add_historical_rival = ROOT }
+	}
+}
