@@ -559,6 +559,7 @@ change_estate_land_share = {
 		mil = 0
 	}
 }
+1337.4.30 = { add_historical_rival = ENG }
 1350.8.22 = {
 	monarch = {
 		name = "Jean II"
