@@ -1850,6 +1850,9 @@
  HREMD129: "The court advisors have come and explained to us the situation with a certain man called Ibn Rushd. Ibn Rushd, a Faylasuf in his creed, has made quite a scene in the field of Aqidah with his writings. He has written refutation of Imam Al-Ghazali's Tahafut, and expounded in length on the writings of Aristotle. His fame has even spread to the Christians, who have started calling him 'The Commentator'. We need to take a stance in the debate; either support Ibn Rushd and his philosophy, or back the rising tide of Ash'ari theologians."
  HREMA129: "Appoint him as Qadi"
  HREMB129: "Banish him"
+ HREMT130: "English-French Rivalry"
+ HREMD130: "As we have seized more and more of the kingdom of France's de-jure territory, we have provoked their ire enough that they no longer wish to tolerate our presence on the land they see as rightfully theirs. This is sure to be the beginning of a long and drawn out rivalry between us and them."
+ HREMA130: "Have at them!"
  FBIT1: "Fall of the Babenbergs"
  FBID1: "For centuries the house of Babenberg has defended the empire's eastern frontier. The last Babenberg monarch, Friedrich II, tried to seize upon the Mongol invasion of Hungary by grabbing several border counties for himself. He underestimated the Hungarians' resolve, however, and was killed in the ensuing counterattack on the banks of the River Leitha in June of 1246.\nLeaving no male heirs behind, his titles became contested between the claims of his daughters Margarete and Gertrude. The former aligned herself with the Premyslids of Bohemia, while the latter betrayed her Premyslid connections for the Swabian margrave Hermann of Baden. The local nobility of Austria and Styria must decide whether to support the vagrant margrave who currently roams the land seeking recognition, or the more powerful kingdom to the north."
  FBIA1: "Support the Premyslids"
