@@ -1849,6 +1849,9 @@
  HREMD129: "Die Berater des Hofes sind zu uns gekommen und haben uns die Situation mit einem gewissen Mann namens Ibn Rushd erklärt. Ibn Rushd, ein Faylasuf in seinem Glaubensbekenntnis, hat mit seinen Schriften auf dem Gebiet von Aqidah eine ziemliche Szene gemacht. Er hat eine Widerlegung von Imam Al-Ghazalis Tahafut geschrieben und die Schriften des Aristoteles ausführlich erläutert. Sein Ruhm hat sich sogar bis zu den Christen verbreitet, die ihn als "Kommentator" bezeichnen. Wir müssen in der Debatte Stellung beziehen; entweder unterstützen wir Ibn Rushd und seine Philosophie oder wir unterstützen die steigende Flut von Ash'ari-Theologen."
  HREMA129: "Ernennt ihn als Qadi"
  HREMB129: "Verbannt ihn"
+ HREMT130: "English-French Rivalry"
+ HREMD130: "As we have seized more and more of the kingdom of France's de-jure territory, we have provoked their ire enough that they no longer wish to tolerate our presence on the land they see as rightfully theirs. This is sure to be the beginning of a long and drawn out rivalry between us and them."
+ HREMA130: "Have at them!"
  FBIT1: "Das Ende der Babenberger"
  FBID1: "Seit Jahrhunderten verteidigt das Haus Babenberg die Ostgrenze des Reiches. Der letzte babenbergische Monarch Friedrich II. versuchte, die mongolische Invasion Ungarns zu nutzen, indem er sich mehrere Grenzgebiete schnappte. Er unterschätzte jedoch die Entschlossenheit der Ungarn und wurde bei dem anschließenden Gegenangriff am Ufer der Leitha im Juni 1246 getötet.\nDa er keine männlichen Erben zurückließ, wurden seine Titel zwischen den Forderungen seiner Töchter Margarete und Gertrud angefochten. Erstere orientierte sich an den böhmischen Premysliden, letztere verriet ihre Verwandtschaft zu den Premysliden für den schwäbischen Markgrafen Hermann von Baden. Der österreichische und steirische Adel muss sich entscheiden, ob er den umherziehenden Markgrafen, der derzeit auf der Suche nach Anerkennung das Land durchstreift, oder das mächtigere Königreich im Norden unterstützt."
  FBIA1: "Unterstützt die Premysliden"
