@@ -2,7 +2,7 @@
 
 # v 2.0.2 #
 
--Small fixes for the following mission trees: Luxembourg, Baghdad, Ifriqiya, Seljuk, Franche-Comte, Switzerland, Karling, Holland, Novgorod, Foix, Kiev, Latin Empire, Cologne
+-Small fixes for the following mission trees: Luxembourg, Baghdad, Ifriqiya, Seljuk, Franche-Comte, Switzerland, Karling, Holland, Novgorod, Foix, Kiev, Latin Empire, Cologne, AEngland
 -Added a decision to unite the Kievan Rus unlocked when the last reform is passed
 -Fixed several mission modifiers
 -Fixed the Bavarian NI set being duplicated
@@ -12,6 +12,7 @@
 -European nations no longer get the estate agenda to obtain spice provinces
 -Fixed Gotland naming issue
 -Buffed Fragmentation of Poland rebels
+-Added event for English-French rivalry and made them historical rivals after the HYW begins
 
 # v 2.0.1 #
 
